# PythonCHelper

./: CMakeLists.txt  README.md
src/: PythonCHelper.cpp  PythonCHelper.h  main.cpp
tests/: CMakeLists.txt  script_test.py  test_main.cpp
